--- a/style.css
+++ b/style.css
@@ -599,14 +599,14 @@ justify-content: space-between;
 }
         
 .footer-section {
-flex: 1;
+flex: 2;
 min-width: 200px;
-margin-bottom: 30px;
-padding: 0 15px;
+margin-bottom: 20px;
+padding: 0 5px;
 }
         
 .footer-section h3 {
-font-size: 18px;
+font-size: 20px;
 margin-bottom: 20px;
 position: relative;
 padding-bottom: 10px;
@@ -652,7 +652,7 @@ align-items: flex-start;
 }
         
 .contact-info i {
-margin-right: 10px;
+margin: 12px;
 color: #fafafa;
 }
         
